--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -53,7 +53,9 @@
         "codecvt": "cpp",
         "*.rh": "cpp",
         "random": "cpp",
-        "fstream": "cpp"
+        "fstream": "cpp",
+        "array": "cpp",
+        "iterator": "cpp"
     },
     "C_Cpp.errorSquiggles": "Enabled"
 }
